# catacomb-engine

./: .gitignore  ;  CMakeLists.txt  LICENCE  LICENSE  compile_flags.txt  main  makefile  todo.txt
config/: gfx.cconf  window.cconf
include/: main.cpp
include/cat/: config.hpp  error.hpp
include/cat/core/: anyptr.hpp  core_engine.hpp  ecs.hpp  engine.hpp  input.hpp  input_manager.hpp  resource_manager.hpp  scene.hpp
include/cat/core/components/: c_scene_tag.hpp  c_transform.hpp  c_world_hierarchy.hpp  c_world_transform.hpp
include/cat/core/ecs/: c_transform.hpp
include/cat/ecs/: ecs.hpp
include/cat/gfx/: canvas.hpp  display_server.hpp  gfx_config.hpp  gfx_engine.hpp  gfx_util.hpp  render_context.hpp  sdl_canvas.hpp  shader.hpp  shader_loader.hpp  sprite_atlas.hpp  sprite_renderer.hpp  texture.hpp  texture_loader.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_layout.hpp
include/cat/util/: benchmark.hpp  cconf.hpp  chrono.hpp  dense_map.hpp  logger.hpp  math.hpp  memory.hpp  sparse_set.hpp  stable_buffer.hpp  storage_buffer.hpp  util.hpp
include/glad/: glad.c  glad.h
include/stb/: stb_image.h
res/: shader.csl  shader.frag
res/shaders/: b.frag  b.vert  raw.frag  raw.vert  sprite.frag  sprite.vert  texture.frag  texture.vert
sandbox/: CMakeLists.txt  compile_flags.txt  lsan_suppressions.txt  makefile
sandbox/res/: shader.csl  shader.frag  shader.vert
sandbox/src/: sandbox.cpp
src/: main.c  main.cpp
src/cat/core/: core_engine.cpp  engine.cpp  input_manager.cpp  scene.cpp
src/cat/gfx/: display_server.cpp  gfx_engine.cpp  sdl_canvas.cpp  shader.cpp  shader_loader.cpp  sprite_atlas.cpp  sprite_renderer.cpp  texture.cpp  texture_loader.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_layout.cpp
src/cat/util/: benchmark.cpp  cconf.cpp  chrono.cpp  math.cpp
src/core/: catacomb.cpp  catacomb.hpp  engine.c  engine.h  gamestate.cpp  gamestate.hpp  input.c  input.cpp  input.h  input.hpp  state.h  time.c  time.h  timer.c  timer.cpp  timer.h  timer.hpp
src/ecs/: c_animation.c  c_animation.h  c_position.c  c_position.h  c_printa.c  c_printa.h  c_sprite.c  c_sprite.h  c_transform.c  c_transform.h  camera.hpp  components.hpp  ecs.c  ecs.h  ecs.hpp  ecs_components.h  ecs_utils.c  ecs_utils.h  sprite.hpp  text.hpp  transform.hpp
src/gfx/: camera.c  camera.cpp  camera.h  camera.hpp  gfx.cpp  gfx.h  gfx.hpp  gfx_util.hpp  renderer.c  renderer.cpp  renderer.h  renderer.hpp  shader.c  shader.cpp  shader.h  shader.hpp  sprite_atlas.c  sprite_atlas.h  spriteatlas.cpp  spriteatlas.hpp  textrenderer.cpp  textrenderer.hpp  triangle.c  triangle.cpp  triangle.h  triangle.hpp  vao.c  vao.cpp  vao.h  vao.hpp  vbo.c  vbo.cpp  vbo.h  vbo.hpp  window.c  window.cpp  window.h  window.hpp
src/util/: array.c  array.h  arraylist.c  arraylist.h  bitmap.h  fmath.h  hashmap.c  hashmap.h  staticlist.c  staticlist.h  strutil.c  strutil.h  types.hpp  util.h  util.hpp  vector.c  vector.h
(+13 files in other folders)
